force-app/main/default/objects/PinCosts__c/PinCosts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For gas choice locational transport costs</description>
    <label>Pin Costs</label>
</CustomObject>