force-app/main/default/objects/PinCosts__c/fields/Com_Avg_Vol_of_peak_2_months_Dth__c.field-meta.xml
<CustomField>
    <fullName>Com_Avg_Vol_of_peak_2_months_Dth__c</fullName>
    <label>Com Avg Vol of peak 2 months (Dth)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>