force-app/main/default/objects/PinCosts__c/fields/Commercial_Demand_Charges__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Demand_Charges__c</fullName>
    <label>Commercial Demand Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>