force-app/main/default/objects/PinCosts__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Allocated cost, per Dth, for delivery to that customer pool</description>
    <inlineHelpText>Allocated cost, per Dth, for delivery to that customer pool</inlineHelpText>
    <label>Cost</label>
    <precision>10</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>