force-app/main/default/objects/PinCosts__c/fields/Pipeline_pin__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_pin__c</fullName>
    <description>The pipeline pin that corresponds with this SG pin</description>
    <inlineHelpText>The pipeline pin that corresponds with this SG pin</inlineHelpText>
    <label>Pipeline pin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>