force-app/main/default/objects/PinCosts__c/fields/Res_Avg_Vol_Peak_Dth__c.field-meta.xml
<CustomField>
    <fullName>Res_Avg_Vol_Peak_Dth__c</fullName>
    <description>How many Dth were used in the peak months (averaged) within this PIN</description>
    <inlineHelpText>How many Dth were used in the peak months (averaged) within this PIN</inlineHelpText>
    <label>Res Avg Vol of peak 2 months (Dth)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>