force-app/main/default/objects/PinCosts__c/fields/Residential_Demand_Charges__c.field-meta.xml
<CustomField>
    <fullName>Residential_Demand_Charges__c</fullName>
    <label>Residential Demand Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>